--- a/gui/templates/detailNew.html
+++ b/gui/templates/detailNew.html
@@ -1,6 +1,6 @@
 {% extends 'base_about.html' %}
 {% load static %}
-{% block title %}Descargas | Observatorio Laboral Aysen{% endblock title%}
+{% block title %}Noticias | Observatorio Laboral Aysen{% endblock title%}
 
 {% block head %}
 <script src="{% static 'gui/js/news.js' %}"></script>
