--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -27,8 +27,10 @@
 
         <div class="stream ">
           <br><br>
-          <h5>Noticias</h5>
-        
+              <h5>Noticias</h5>
+            {% if user.is_authenticated %}
+        <a class="btn btn-action btn-blue alignright" data-tooltip="Agregar Noticia" data-position="top" href="{% url 'gui:newNews' %}"><i class="material-icons">+</i></a>
+    {% endif %}
           
           <div class="tarjeta-container">
           	{% if news %}
