--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -22,18 +22,33 @@
     <div class="carousel carousel-slider center banner" data-indicators="true">
       <div class="carousel-item black white-text" href="#one!" id='thebigimage'>
         <div class="row">
-          <div class="col s1"></div>
-          <div class="col s4"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
-          <div class="col s4"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
         </div>
          
          
       </div>
       <div class="carousel-item amber white-text" href="#two!">
+         <div class="row">
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
+        </div>
       </div>
       <div class="carousel-item green white-text" href="#three!">
+         <div class="row">
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
+        </div>
       </div>
       <div class="carousel-item blue white-text" href="#four!">
+         <div class="row">
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
+        </div>
       </div>
     </div>
   </div>
