facebook, twitter and face in advice team.

--- a/gui/templates/about.html
+++ b/gui/templates/about.html
@@ -32,5 +32,10 @@
 			</div>
 		</div>
 	</div>
+    <div class="divider"></div>
+    <div class="col s12">
+      <a href="https://www.facebook.com/sence.gob.cl" target=_blank><img src="{% static 'gui/img/facebook.png' %}" id="logo_facebook"></a>
+      <a href="https://twitter.com/SenceChile" target=_blank><img src="{% static 'gui/img/twitter.png' %}" id="logo_twitter"></a>
+    </div>  
 </div>
 {% endblock content_home %}
