--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -30,25 +30,25 @@
 <div class="row white">
 	<br>
 	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<img src="{% static 'gui/img/andres.png' %}" class='responsive-img circle'>
 		<center>Nombre Apellido</center>
 		<center>Cargo</center>
 		<br>
 	</div>
 	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<img src="{% static 'gui/img/carlos.png' %}" class='responsive-img circle'>
 		<center>Nombre Apellido</center>
 		<center>Cargo</center>
 		<br>
 	</div>
 	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<img src="{% static 'gui/img/maria.png' %}" class='responsive-img circle'>
 		<center>Nombre Apellido</center>
 		<center>Cargo</center>
 		<br>
 	</div>
 	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<img src="{% static 'gui/img/juan.png' %}" class='responsive-img circle'>
 		<center>Nombre Apellido</center>
 		<center>Cargo</center>
 		<br>
