--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -59,6 +59,21 @@
 			<div class="card-image center">
 				<img src="/media/{{n.imagen}}" class='responsive-img'> 
 			</div>
+          <div class='row'>
+            <div class='col l2'>
+              <a title='me gusta' class='waves-effect waves-light'>
+              <i class="large material-icons ">thumb_up</i>
+              </a>
+            </div>
+            <div class='col l3'>
+              <a class="waves-effect waves-light btn-large">Compartir<i class="material-icons right">facebook</i>button</a>
+            </div>
+            <div class='col l3 blue-text'>
+              <a href='#' title='me gusta'>
+              <i class="large material-icons ">thumb_up</i>
+              </a>
+            </div>
+          </div>
 		</div>
 		<div class="modal-footer">
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
