--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -43,12 +43,14 @@
 					<span class="card-title">{{n.title}}</span>
 				</a>
 				<p>{{n.resumen}}</p>
+              
 				{% if user.is_authenticated %}
 				<a href="{% url 'gui:updateNews' n.pk %}" id='{{n.pk}}'><span class="new badge" data-badge-caption="Editar"></span></a>
 				<a href="{% url 'gui:deleteNews' n.pk %}" id='{{n.pk}}'><span class="new badge red" data-badge-caption="Eliminar"></span></a>
 				{% endif %}
-
+                <a href="javascript: void(0);" onclick="window.open('http://www.facebook.com/sharer.php?u=http://hapticus.pythonanywhere.com/noticias','ventanacompartir', 'toolbar=0, status=0, width=650, height=450');"><span class="new badge blue" data-badge-caption="compartir"></span></a>
 			</div>
+            
 		</div>
 	</div>
 	<div id="modal{{n.pk}}" class="modal">
