added images to banner and texts

--- a/gui/templates/about.html
+++ b/gui/templates/about.html
@@ -28,7 +28,16 @@
 		<div class="divider"></div>
 		<div class="row">
 			<div class="col s12">
-				<p>El Observatorio Laboral para la Región de Antofagasta se encuentra integrado en la red de Observatorios Laborales desarrollada por el Servicio Nacional de Capacitación y Empleo, contando con el financiamiento de la Sociedad de Fomento Fabril. La misión del observatorio es producir conocimiento e información sobre el funcionamiento y caracterización del mercado de trabajo y su dinámica para la Región de Antofagasta, avanzando hacia la anticipación de las brechas futuras de capital humano. Esto con el objetivo de mejorar la empleabilidad de los trabajadores y productividad de la región, por medio de proveer información que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo. Los principales usuarios de la información provista por el Observatorio son instituciones de Gobierno, las Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios a nivel regional como nacional. El Observatorio Laboral para la Región de Antofagasta es parte de una red de observatorios regionales (uno para cada región del país) coordinados por el Observatorio Nacional (http://observatorionacional.cl/). Este Observatorio Nacional está conformado por una oficina central y la red de 15 observatorios. El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio contará con un consejo asesor que integrará representantes del Estado, del mundo empresarial, empresarios, trabajadores y académicos.  </p>
+				<p>El Observatorio Laboral Aysén es parte de la red de Observatorios Laborales desarrollada por el Servicio Nacional de Capacitación y Empleo, SENCE; en conjunto con la Sociedad de Fomento Fabril, SOFOFA. </p>
+			</div>
+          <div class="col s12">
+				<p>La misión del observatorio es producir conocimiento e información sobre el funcionamiento y caracterización del mercado de trabajo y su dinámica para la Región de Aysén, avanzando hacia la anticipación de las brechas futuras de capital humano. Esto con el objetivo de mejorar la empleabilidad de los trabajadores y productividad de la región, mediante la generación de información que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo.</p>
+			</div>
+          <div class="col s12">
+				<p>Los principales usuarios de la información provista por el Observatorio Laboral Aysén son instituciones de Gobierno, Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios a nivel regional como nacional. </p>
+			</div>
+          <div class="col s12">
+				<p>La red de observatorios es coordinada por el Observatorio Laboral Nacional (http://www.observatorionacional.cl). El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio cuenta con un consejo asesor que integra representantes del Estado, sector público, empresarios, trabajadores y académicos.</p>
 			</div>
 		</div>
 	</div>
