--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -22,7 +22,30 @@
 		<div class="divider"></div>
 		<div class="row">
 			<div class="col s12">
-				<p>El consejo asesor que rige la actividad del Observatorio Laboral para la Región de Antofagasta está presidido por el/la Director/a Regional de SENCE que contará con la participación de el/la Seremi de Economía regional, el/la Seremi del Trabajo, un representante de CORFO, un representante del INE, un representante regional del Ministerio de Desarrollo Social, dos representantes regionales del ámbito empresarial, dos representantes regionales del ámbito laboral (trabajadores) y dos representantes del sector educacional. </p>
+				<p>El Consejo Asesor, como órgano superior en la estructura del Observatorio Laboral Aysén, es una instancia en la que estan integrados y representados distintos actores relevantes y representativos a nivel del Gobierno Regional, de las Organizaciones Empresariales y Sindicales de la Región de Aysén.</p>
+			</div>
+            <div class="col s12">
+				<p>De esta forma se busca dotar al Director del Observatorio Laboral Regional del máximo acompañamiento posible de las instituciones, organizaciones y autoridades, tanto públicas como privadas, que garanticen el posicionamiento, integración y relevancia de las acciones llevadas a cabo en su interior.</p>
+			</div>
+            <div class="col s12">
+				<p>Para el caso del Observatorio Laboral Aysén, el Consejo Asesor esta integrado por: </p>
+                <ul>
+                  <li>Director Regional de SENCE Aysén</li>
+                  <li>Representante del INE Región de Aysén</li>
+                  <li>Director CORFO Región de Aysén</li>
+                  <li>Seremi del Trabajo y Previsión Social Aysén</li>
+                  <li>Seremi Desarrollo Social Aysén</li>
+                  <li>Seremi de Educación Aysén</li>
+                  <li>Campus Patagonia UACh</li>
+                  <li>Universidad de Aysén</li>
+                  <li>Inacap Coyhaique</li>
+                  <li>Consejo Regional de Aysén</li>
+                  <li>Multigremial Aysén</li>
+                  <li>Federación Gremios Turismo</li>
+                  <li>Salmon Chile</li>
+                  <li>Sindicato Friosur</li>
+                  <li>Sindicato Hipermas</li>
+                </ul>
 			</div>
 		</div>
 	</div>
