--- a/gui/templates/team.html
+++ b/gui/templates/team.html
@@ -19,39 +19,68 @@
 				<h4>Equipo</h4>
 			</div>
 		</div>
-		<div class="divider"></div>
-		<div class="row">
-			<div class="col s12">
-				<p>NOMBRES DE LOS INTEGRANTES DEL EQUIPO AYSEN </p>
-				<P>Asimismo, se cuenta con el apoyo para el análisis del alumnado de postgrado del Departamento de Economía de la UCN y con el apoyo en la administración del proyecto de Berta Romero, Lorena Saldes y Mélida Barrios. </P>
-			</div>
-		</div>
 	</div>
 </div>
 <div class="row white">
 	<br>
-	<div class="col s6 m3 l3">
+	<div class="col s6 m4 l4">
 		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
+		<center>Víctor Iduarte Cofré</center>
+		<center>Director de Proyecto </center>
 		<br>
 	</div>
-	<div class="col s6 m3 l3">
+	<div class="col s6 m4 l4">
 		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
+		<center>Cristian Mondaca Marino</center>
+		<center>Analista Senior</center>
 		<br>
 	</div>
-	<div class="col s6 m3 l3">
+	<div class="col s6 m4 l4">
 		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
+		<center>Ailin Arriagada Millaman</center>
+		<center>Asesor Cuantitativo</center>
 		<br>
 	</div>
-	<div class="col s6 m3 l3">
+	<div class="col s6 m4 l4">
 		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
+		<center>Jorge Cea Rodriguez </center>
+		<center>Asesor Cualitativo</center>
+		<br>
+	</div>
+    <div class="col s6 m4 l4">
+          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+          <center>Arturo del Rio Correa</center>
+          <center>Analista Cuantitativo</center>
+          <br>
+      </div>
+    <div class="col s6 m4 l4">
+          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+          <center>Claudio Herrera Figueroa</center>
+          <center>Analista Cualitativo</center>
+          <br>
+      </div>
+    <div class="col s6 m4 l4">
+          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+          <center>Christian Lazo Ramírez</center>
+          <center>Asesor en Sistemas de Información</center>
+          <br>
+      </div>
+    <div class="col s6 m4 l4">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Andres Nova Reyes</center>
+		<center>Experto en Diseño Organizacional</center>
+		<br>
+	</div>
+    <div class="col s6 m4 l4">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Felipe Elmes Pehuen</center>
+		<center>Encargado relaciones institucionales y difusión</center>
+		<br>
+	</div>
+    <div class="col s6 m4 l4">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Yohana Aguilar Fernández</center>
+		<center>Profesional Administrativo</center>
 		<br>
 	</div>
 </div>
