--- a/gui/static/gui/css/style.css
+++ b/gui/static/gui/css/style.css
@@ -117,16 +117,41 @@ td img{
     width: 400px;
 }
 
-#thebigimage {
-	background-image: url('../img/Observatorio_Laboral_banner-02.jpg');
-	/*
-    background-image:url("{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}");
-    
-    height:548px;
-    margin-left:auto;
-    margin-right:auto;*/
-    position:relative; /* and this has to be relative */
-    /*width:731px;*/
+.bannerImage1 {
+	background-image: url('../img/banner/agricola.jpg');
+	position:relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+} 
+.bannerImage2 {
+  background-image: url('../img/banner/comercio.jpg');
+  position:relative;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+.bannerImage3 {
+	background-image: url('../img/banner/ganaderia.jpg');
+	position:relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+} 
+.bannerImage4 {
+	background-image: url('../img/banner/turismo.jpg');
+	position:relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+} 
+.bannerImage5 {
+	background-image: url('../img/banner/sector-pesquero.jpg');
+	position:relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+} 
+.bannerImage6 {
+	background-image: url('../img/banner/sector-acuicola.jpg');
+	position:relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 } 
 
 #auxOtic{
