--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -11,7 +11,7 @@
   <script src="{% static 'gui/js/materialize.min.js' %}"></script> 
   <script src="{% static 'gui/js/materialize.js' %}"></script> 
   <script src="{% static 'gui/js/scripts.js' %}"></script>
-  <link rel='stylesheet' href="{% static 'gui/css/style.css' %}"></link>
+  <link rel='stylesheet' href="{% static 'gui/css/style.css' %}"/>
   <link rel="shortcut icon" href="{% static 'gui/img/favicon.ico' %}" />
   {% block head %}{% endblock %}
 </head>
@@ -20,7 +20,7 @@
   <!-- carrousel -->
   <div class="container">
     <div class="carousel carousel-slider center banner" data-indicators="true">
-      <div class="carousel-item black white-text" href="#one!" id='thebigimage'>
+      <div class="carousel-item black white-text bannerImage1" href="#one!">
         <div class="row">
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
@@ -29,21 +29,35 @@
          
          
       </div>
-      <div class="carousel-item amber white-text" href="#two!">
+      <div class="carousel-item amber white-text bannerImage2" href="#two!">
+         <div class="row" >
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
+        </div>
+      </div>
+      <div class="carousel-item green white-text bannerImage3" href="#three!">
+         <div class="row" id="thebigimage3">
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+          <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
+        </div>
+      </div>
+      <div class="carousel-item blue white-text bannerImage4" href="#four!">
          <div class="row">
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
           <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
         </div>
       </div>
-      <div class="carousel-item green white-text" href="#three!">
+      <div class="carousel-item blue white-text bannerImage5" href="#five!">
          <div class="row">
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
           <div class="col s4 m3 offset-m3"><img src="{% static 'gui/img/logo_obs_aysen.png'%}" id='logo_obs_aysen' class="responsive-img"></div>
         </div>
       </div>
-      <div class="carousel-item blue white-text" href="#four!">
+      <div class="carousel-item blue white-text bannerImage6" href="#six!">
          <div class="row">
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
           <div class="col s4 m3"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
@@ -72,7 +86,7 @@
       <ul class="center hide-on-med-and-down">
         <li id="about"><a class="dropdown-button grey-text text-darken-3" href="#!" data-activates="dropdown1">QUIÉNES SOMOS<i class="material-icons right">arrow_drop_down</i></a></li>
         <li id="panorama"><a class='grey-text text-darken-3' href="{% url 'gui:panorama'%}">PANORAMA REGIONAL</a></li>
-        <li id="sectors"><a class='grey-text text-darken-3' href="{% url 'gui:sectors'%}">SECTORES</a></li>
+        <li id="sectors"><a class='grey-text text-darken-3' href="{% url 'gui:sectors'%}">SECTORES PRODUCTIVOS</a></li>
         <li id="activities"><a class='grey-text text-darken-3' href="{% url 'gui:activities'%}">OCUPACIONES</a></li>
         <li id="news"><a class='grey-text text-darken-3' href="{% url 'gui:news' %}">NOTICIAS</a></li>
         {% if user.is_authenticated %}
@@ -84,7 +98,7 @@
       <ul class="side-nav" id="mobile-demo">
         <li id="s_about"><a class="dropdown-button grey-text text-darken-3" href="#!" data-activates="dropdown2">QUIÉNES SOMOS<i class="material-icons right">arrow_drop_down</i></a></li>
         <li id="s_panorama"><a class='grey-text text-darken-3' href="{% url 'gui:panorama'%}">PANORAMA REGIONAL</a></li>
-        <li id="s_sectors"><a class='grey-text text-darken-3' href="{% url 'gui:sectors'%}">SECTORES</a></li>
+        <li id="s_sectors"><a class='grey-text text-darken-3' href="{% url 'gui:sectors'%}">SECTORES PRODUCTIVOS</a></li>
         <li id="s_activities"><a class='grey-text text-darken-3' href="{% url 'gui:activities'%}">OCUPACIONES</a></li>
         <li id="s_news"><a class='grey-text text-darken-3' href="{% url 'gui:news' %}">NOTICIAS</a></li>
         {% if user.is_authenticated %}
