--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -16,8 +16,8 @@
 
 <div class='row'>
 	<div class="col s12">
-		<h4>Bienvenido al Observatorio Laboral de Aysen</h4>
-		<p>El Observatorio Laboral de Aysen (OLA) se enmarca en un proyecto nacional de instalación de observatorios laborales en todas las regiones del país. En términos operativos el trabajo del OLA se realiza de acuerdo a los lineamientos del Observatorio Nacional, instancia que define los productos y las metodologías de trabajo, y al mismo tiempo apoya y monitorea la instalación de los observatorios en las regiones.</p>
+		<h4>Bienvenidos al Observatorio Laboral para la Región de Aysén</h4>
+		<p>El Observatorio Laboral es un espacio para que los trabajadores y trabajadoras del país, estudiantes, empresas e instituciones formadoras puedan encontrar información de la situación productiva y de ocupaciones a nivel nacional y regional.</p>
 		<div class="divider"></div>
 	</div>
 </div>
