--- a/gui/templates/sectors.html
+++ b/gui/templates/sectors.html
@@ -9,13 +9,20 @@
 {% block content_home %}
 <br>
 <div class="row">
-  <div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Sectores >></a></div>
+  <div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Sectores Productivos >></a></div>
   <div class="col s3"></div>  
 </div>
 <div class="row">
 	<div class="col s12">
-	<h4>Sectores</h4>
-	<p>Actualmente se están priorizando los sectores de la región y pronto se elaborarán reportes de los sectores priorizados.</p>
+	<h4>Sectores Productivos</h4>
+	<p>El Observatorio Laboral Aysén, tiene por objetivo general producir conocimiento sobre las brechas de ocupaciones actuales y prospectivas de las mismas, para una toma de decisiones informada respecto a políticas de formación y capacitación, empleabilidad y productividad en Chile y en la Región en particular.</p>
+    <p>El trabajo desarrollado durante los primeros cuatro meses de instalación del Observatorio, se ha centrado en la revisión de fuentes provenientes de base de datos ENE, CASEN e ESI, entre otras; con el propósito de definir 3 sectores económicos en los que se centrará la labor del Observatorio durante el primer año de funcionamiento.</p>
+    <p>De esta forma, se ha determinado analizar los siguientes sector productivos: </p>
+    <ul>
+      <li>AGRICULTURA Y GANADERÍA</li>
+      <li>ACUÍCOLA Y PESQUERO</li>
+      <li>COMERCIO Y TURISMO</li>
+    </ul>
 	</div>
 </div>
 
