--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -30,26 +30,27 @@
             <div class="col s12">
 				<p>Para el caso del Observatorio Laboral Aysén, el Consejo Asesor esta integrado por: </p>
                 <ul>
-                  <li>Director Regional de SENCE Aysén</li>
-                  <li>Representante del INE Región de Aysén</li>
-                  <li>Director CORFO Región de Aysén</li>
-                  <li>Seremi del Trabajo y Previsión Social Aysén</li>
-                  <li>Seremi Desarrollo Social Aysén</li>
-                  <li>Seremi de Educación Aysén</li>
-                  <li>Campus Patagonia UACh</li>
-                  <li>Universidad de Aysén</li>
-                  <li>Inacap Coyhaique</li>
-                  <li>Consejo Regional de Aysén</li>
-                  <li>Multigremial Aysén</li>
-                  <li>Federación Gremios Turismo</li>
-                  <li>Salmon Chile</li>
-                  <li>Sindicato Friosur</li>
-                  <li>Sindicato Hipermas</li>
+                  <li>Director Regional de SENCE Aysén / César Gómez Berrocal</li>
+                  <li>Representante del INE Región de Aysén / Manuel Vivar Aguila </li>
+                  <li>Director CORFO Región de Aysén / Claudio Montecinos Angulo</li>
+                  <li>Seremi del Trabajo y Previsión Social Aysén / Rossana Valderas Almonacid </li>
+                  <li>Seremi Desarrollo Social Aysén / Sonia Pardo Martínez</li>
+                  <li>Seremi de Educación Aysén / Hugo Urrutia Urrutia</li>
+                  <li>Campus Patagonia UACh / Arturo Escobar Valledor</li>
+                  <li>Universidad de Aysén / María Marshall Infante</li>
+                  <li>Inacap Coyhaique / Cherie Hernández Frei</li>
+                  <li>Consejo Regional de Aysén / Julio Rossel González</li>
+                  <li>Multigremial Aysén / Andrés Pincheira Stambuk</li>
+                  <li>Federación Gremios Turismo / Ylsie Wolf Herrera</li>
+                  <li>Salmon Chile / Maribel Mancilla Bórquez</li>
+                  <li>Sindicato Friosur / Rúben Leal Pérez</li>
+                  <li>Sindicato Hipermas / Jennifer Aguilar Alvarado</li>
                 </ul>
 			</div>
 		</div>
 	</div>
 </div>
+<!--
 <div class="row white">
 	<br>
 	<div class="col s6 m3 l3">
@@ -76,5 +77,5 @@
 		<center>Cargo</center>
 		<br>
 	</div>
-</div>
+</div>-->
 {% endblock content_home %}
