--- a/gui/templates/team.html
+++ b/gui/templates/team.html
@@ -12,76 +12,78 @@
 	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Equipo >></a></div>
 	<div class="col s3"></div>	
 </div>
-<div class="row">
-	<div class="col s12 white">
+<div class="row white">
+	<div class="col s12">
 		<div class="row">
 			<div class="col s12">
 				<h4>Equipo</h4>
 			</div>
 		</div>
+      <div class="divider"></div>
+      <div class="row white">
+          <br>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Víctor Iduarte Cofré</center>
+              <center>Director de Proyecto </center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Cristian Mondaca Marino</center>
+              <center>Analista Senior</center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Ailin Arriagada Millaman</center>
+              <center>Asesor Cuantitativo</center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Jorge Cea Rodriguez </center>
+              <center>Asesor Cualitativo</center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+                <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+                <center>Arturo del Rio Correa</center>
+                <center>Analista Cuantitativo</center>
+                <br>
+            </div>
+          <div class="col s6 m4 l4">
+                <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+                <center>Claudio Herrera Figueroa</center>
+                <center>Analista Cualitativo</center>
+                <br>
+            </div>
+          <div class="col s6 m4 l4">
+                <img src="{% static 'gui/img/team/christian-lazo.jpg' %}" class='responsive-img circle'>
+                <center>Christian Lazo Ramírez</center>
+                <center>Asesor en Sistemas de Información</center>
+                <br>
+            </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Andres Nova Reyes</center>
+              <center>Experto en Diseño Organizacional</center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Felipe Elmes Pehuen</center>
+              <center>Encargado relaciones institucionales y difusión</center>
+              <br>
+          </div>
+          <div class="col s6 m4 l4">
+              <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+              <center>Yohana Aguilar Fernández</center>
+              <center>Profesional Administrativo</center>
+              <br>
+          </div>
+      </div>
 	</div>
 </div>
-<div class="row white">
-	<br>
-	<div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Víctor Iduarte Cofré</center>
-		<center>Director de Proyecto </center>
-		<br>
-	</div>
-	<div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Cristian Mondaca Marino</center>
-		<center>Analista Senior</center>
-		<br>
-	</div>
-	<div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Ailin Arriagada Millaman</center>
-		<center>Asesor Cuantitativo</center>
-		<br>
-	</div>
-	<div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Jorge Cea Rodriguez </center>
-		<center>Asesor Cualitativo</center>
-		<br>
-	</div>
-    <div class="col s6 m4 l4">
-          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-          <center>Arturo del Rio Correa</center>
-          <center>Analista Cuantitativo</center>
-          <br>
-      </div>
-    <div class="col s6 m4 l4">
-          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-          <center>Claudio Herrera Figueroa</center>
-          <center>Analista Cualitativo</center>
-          <br>
-      </div>
-    <div class="col s6 m4 l4">
-          <img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-          <center>Christian Lazo Ramírez</center>
-          <center>Asesor en Sistemas de Información</center>
-          <br>
-      </div>
-    <div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Andres Nova Reyes</center>
-		<center>Experto en Diseño Organizacional</center>
-		<br>
-	</div>
-    <div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Felipe Elmes Pehuen</center>
-		<center>Encargado relaciones institucionales y difusión</center>
-		<br>
-	</div>
-    <div class="col s6 m4 l4">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Yohana Aguilar Fernández</center>
-		<center>Profesional Administrativo</center>
-		<br>
-	</div>
-</div>
+
 {% endblock content_home %}
